# Sparsene-SC26-AD

./: .gitignore  .gitmodules  README.md  generate_figures_tables.sh  quick_test.sh
AccSpMM/: CMakeLists.txt  LICENSE  README.md  install_accspmm.sh  run_acc_spmm_kernel.sh  uninstall_accspmm.sh
AccSpMM/include/: common.hpp  format.hpp  mma_tf32.cuh  mmio.hpp  ptx_tf32.hpp  tf32_comp.hpp  utils.hpp
AccSpMM/src/: mma_tf32.cu
SparseTIR-exp/: LICENSE  (+3 more)
sparsene/: .clang-format  .gitignore  CMakeLists.txt  install_sparsene.sh  run_cusparse_kernel.sh  run_sparsene_kernel.sh  uninstall_sparsene.sh
sparsene/end2end/: install_dgl_end2end.sh  install_dtc_spmm_end2end.sh  install_sparsene_end2end.sh  readme.md  run.sh  run_dgl_end2end.sh  run_dtc_spmm_end2end.sh  run_flashsparse_end2end.sh  run_pyg_end2end.sh  run_sparsene_end2end.sh
sparsene/end2end/gcn/: eva_gcn_sparsene.py  external_backend_spmm.py
sparsene/end2end/scripts/: compare_speedup_vs_flashsparse.py  run_all_impl_n128_26.sh
sparsene/examples/: .gitignore  CMakeLists.txt  Makefile  dtc-spmm-demo.cu  layouts.hpp  results_smat.csv  sm80_demo.cu  test_cute.cu  test_pipeline.cpp
sparsene/examples/matrix_generator/: CMakeLists.txt  main.cu
sparsene/examples/matrix_generator/scripts/: gen.py
sparsene/examples/scripts/: filtered_mtx_files.txt.small  selected_mtx.txt  selected_mtx_rel.txt  test_acc_tensor_smem.sh  test_kerenl.sh  test_selected.sh
sparsene/examples/src/: common.h  mmio.cu  mmio.h  mmio_highlevel.cu  mmio_highlevel.h  utils.cu  utils.h
sparsene/examples/src_fp32/acc/testbed/: .gitignore  CMakeLists.txt  acc_ops.py  acc_ops_spmv.py  cutlass  host_program.cu  host_program_profiling.cu  host_program_spmv.cu  instrumentation.cuh  instrumented_main.cu  kernel.inc  kernel_spmv.inc  main.cu  main_spmv.cu  plans.txt
sparsene/examples/src_fp32/acc/testbed/scripts/: acc.dot  bitbsr.dot  durations.csv  filter_plan.py  filtered_plans.txt  full.csv  generate_manifest.py  instrument_kernel.py  perf_model.py  plan_ranker.py  plan_searcher.py  run_evaluation.sh  search_best_plan.py  simulate_plans.py  test_plan.sh
sparsene/examples/src_fp32/acc/testbed/scripts/motivation_scripts/: cluster_plan_search.py  draw_motiv_acc-plan_compared.py  draw_plan.py  draw_single_shift_vs_exchange_xy.py  less_1.4ms_plan.txt  plan_results.json  plan_results_exchange.json  process_single_shift-time-block_num-exchangexy.py  process_single_shift-time-block_num.py  select_up_2ms.py  test_plan_up2ms.sh  test_single_shift.txt
sparsene/examples/src_fp32/bitbsr/testbed/: CMakeLists.txt  bitbsr_ops.py  bitbsr_ops_spmv.py  host_program.cu  host_program_profiling.cu  host_program_spmv.cu  instrumented_main.cu  kernel.inc  kernel_spmv.inc  main.cu  main_spmv.cu
sparsene/examples/src_fp32/bitbsr/testbed/scripts/: bitbsr.dot  generate_manifest.py  instrument_kernel.py  perf_model.py  plan_ranker.py  plan_searcher.py  run_evaluation.sh  search_best_plan.py  simulate_plans.py
sparsene/examples/src_fp32/cusparse/testbed/: CMakeLists.txt  main.cu  main_spmv.cu
sparsene/examples/src_fp32/dtc/testbed/: CMakeLists.txt  DTCSpMM.cpp  DTCSpMM_kernel.cu  README_python_bind.md  dtc_ops.py  dtc_ops_multi_binding.py  dtc_ops_spmv.py  dtc_ops_strict_lb.py  dtc_runtime_api.h  host_program.cu  host_program_multi_binding.cu  host_program_spmv.cu  host_program_strict_lb.cu  kernel.inc  kernel_multi_binding.inc  kernel_spmv.inc  kernel_strict_lb.inc  main.cu  main_spmv.cu  main_strict_lb.cu  setup.py
sparsene/examples/src_fp32/dtc/testbed/scripts/: check_results.py  collect_durations.py  dtc.dot  durations_dtc_plans.csv  filter_plan.py  filtered_plans.txt  find_all_mtx_path.py  lb_result.csv  old_plans.txt  plan_searcher.py  replace_in_file.py  run_ncu_all.py  test_kerenl_lb.sh  test_plan.sh
sparsene/examples/src_fp32/sr_bcrs/testbed/: CMakeLists.txt  SRBCRSSpMM.cpp  SRBCRSSpMM_kernel.cu  host_program.cu  host_program_16x8.cu  host_program_16x8_spmv.cu  host_program_multi_bind.cu  host_program_strict_lb.cu  kernel.inc  kernel_16x8_spmv.inc  kernel_lb.inc  main.cu  main_16x8.cu  main_16x8_spmv.cu  main_multi_bind.cu  main_multi_bind_16x8.cu  main_strict_lb.cu  main_strict_lb_16x8.cu  setup.py  sr_bcrs_ops.py  sr_bcrs_ops_16x8_spmv.py  srbcrs_runtime_api.h
sparsene/examples/src_fp32/sr_bcrs/testbed/scripts/: plan_searcher.py
sparsene/load_balance/: CMakeLists.txt  ablation_merged.json  cutlass  host_program.cu  host_program_multi_binding.cu  host_program_strict_lb.cu  install_sparsene_lb.sh  kernel.inc  kernel_multi_binding.inc  kernel_strict_lb.inc  main_multi_binding.cu  plot_sm_balance_compare_new.py  run_load_balance.sh  src
sparsene/python/: pyproject.toml
sparsene/python/sparsene/: __init__.py
sparsene/python/sparsene/format/: format.py
sparsene/python/sparsene/formats/: Acc_SpMM.py  DTC_SpMM.py  HME_TCF.py  ROW_REORDER_SR_BCRS.py  SR_BCRS.py  Spaden.py  dense.py
sparsene/python/sparsene/logging/: __init__.py  logger.json
sparsene/python/sparsene/op_gen/: README.md
sparsene/python/sparsene/op_gen/computent/: arraydef.py  computent.py  schedule.py  symbolTable.py
sparsene/python/sparsene/op_gen/nvir/: codegen.py  compiler_driver.py  generate.py  layout_propagator.py  nvop.py  plan.py  printer.py  templates.py
sparsene/python/sparsene/op_gen/nvir/opgraph/: graph.py  graphviz_visualizer.py  printer.py
sparsene/python/sparsene/op_gen/nvir/pipeline/: int_planner.py  pipeline_planner.py
sparsene/python/sparsene/op_gen/opir/: cValFlattenPass.py  generate.py  op_ir.py  ops.py  printer.py  varlenLoweringPass.py
sparsene/python/sparsene/simulator/: random_pick.py  simulator.py  test_different_strategy.py
sparsene/python/sparsene/transform/: __init__.py  rts.py  transformation.py
sparsene/python/sparsene/utils/: source.py
sparsene/python/test/: test_generate.py  test_graph.py  test_param.py  test_rts.py  test_rts_parser.py
sparsene/search_convergence/: build_plans.sh  run_search_convergence.sh
sparsene/simulator/: eval_topk_precision.py  evaluate_subset_ranking_accuracy.py  run_simulator_accuracy.sh  simulator_accuracy.sh
(+190 files in other folders)
